# second-task-tanks

./: .gitattributes  .gitignore  Cargo.toml  README.md
site/: index.html  index.js  package.json  style.css
src/: main.rs
src/tank/: cube.rs  cuboid.rs
