[package]
name = "trial"
version = "0.1.0"
authors = [""]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
three-d = "0.15.0"
three-d-asset = "0.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "0.2"